Fixed problem where scrollbars were appearing when certain links on the edge of the page were clicked.
git-svn-id: http://svn.uscm.org/staffsite/trunk/controlled-src@5144 e11218b7-830e-0410-a693-d1c1f8b4456b

--- a/rails-src/fsk/public/stylesheets/fsk.css
+++ b/rails-src/fsk/public/stylesheets/fsk.css
@@ -34,7 +34,7 @@ h3 { /* page sections */
     text-align: left;
     color: #336699;
     border-bottom: 1px solid #336699;
-    padding: 0px 0px 2px 0px; }
+    margin: 1.5em 0px 0.5em 0px; }
     
 td { 
 	padding: 2px 2px;
@@ -51,9 +51,6 @@ td.lbl { text-align: right; }
 
 td.input { text-align: left; }
 
-.bold { 
-	font-weight: bold; }
-
 /* descendants */
 tr.header {
 	font-weight: bold;
@@ -61,32 +58,34 @@ tr.header {
 	background-color: #336699; 
 	text-align: center; }
 
-table#normal {	
-	width: 100%; 
+table.normal {	
+	width: auto; 
 	font-size: 10pt; 
 	border: 1px solid #336699;
 	border-top: 10px solid #336699; 
 	background-color: #D0DDEA; 
 	color: #336699; }
+	
+table.normal td { border: 1px solid #336699; empty-cells: show; }
 
-table#summary {	
+table.summary {	
 	width: 100%; 
 	font-size: 8pt; 
 	border: 1px solid #336699;
 	background-color: #D0DDEA; 
 	color: #336699; 
-	margin-top: 1em; }
+	margin-top: 0.5em; }
 
-table#summary td {
+table.summary td {
 	text-align: center; 
 	margin: 0px; }
 
 /* Page id's */
 
 #wrapper {
-	width: 760px;
-	overflow: auto;
-	margin: 0px auto;
+	width: 780px;
+	overflow: hidden;
+	margin: 0px;
 	background-color: white;
 	font-family: Arial, Times New Roman, Verdana, sans-serif; 
 	text-align: left; 
@@ -94,23 +93,25 @@ table#summary td {
 
 #wrapper-summary { /* to be used on the FSK summary page */
 	width: 845px;
-	overflow: auto;
-	margin: 0px auto;
+	overflow: hidden;
+	margin: 0px;
+	padding: 0px;
 	background-color: white;
-	font-family: Arial, Times New Roman, Verdana, sans-serif; 
-	padding: 0px; }
+	font-family: Arial, Times New Roman, Verdana, sans-serif; }
 
 #top-pane {
 	width: inherit;
 	height: 80px;
 	margin-top: 20px;
-	margin-bottom: 15px; }
+	margin-bottom: 15px; 
+	padding: 0px; }
 
 #footer {
 	width: 100%;
 	margin-top: 20px;
 	font-size: 8pt;
-	text-align: center; }
+	text-align: center; 
+    padding: 0px; }
 
 #help {
 	width: 225px;
@@ -118,7 +119,8 @@ table#summary td {
 	float: right;
 	margin: -1px 0px 15px 15px; 
 	/*border-left: 1px solid #D0DDEA; */
-	clear: both; }
+	clear: both; 
+	padding: 0px; }
 
 #help a {
 	font-size: 10pt; 
@@ -137,11 +139,12 @@ table#summary td {
 	margin-top: 5px; }
 
 #spacer {
-	width: 760px; 
+	width: 100%; 
 	height: 5px;
 	background-color: white; 
 	margin: 5px 0px 5px 0px; 
-	clear: both; }
+	clear: both; 
+	padding: 0px; }
 
 /* navbar */
 #navbar {
@@ -151,7 +154,8 @@ table#summary td {
 	float: right;
 	background-color: #336699; 
 	text-align: right;
-	margin-top: 60px; }
+	margin-top: 60px; 
+	padding: 0px; }
 
 #navbar a {
 	padding-left: 12px;
